# selenium

./: .bazelignore  .bazelrc  .bazelrc.remote  .editorconfig  .gitattributes  .gitignore  .pr_agent.toml  .skipped-tests  AGENTS.md  AUTHORS  BUILD.bazel  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  Rakefile  WORKSPACE  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
common/manager/: BUILD.bazel
common/remote-build/java/: BUILD.bazel
dotnet/: .editorconfig  AGENTS.md  AssemblyInfo.cs.template  BUILD.bazel  CHANGELOG  Selenium.slnx  defs.bzl  paket.dependencies  paket.nuget.bzl  selenium-dotnet-version.bzl  update-deps.sh  version.bzl
dotnet/.config/: dotnet-tools.json
dotnet/docs/: docfx.json  index.md
dotnet/private/: BUILD.bazel  GenerateResourcesTool.cs  docfx.bzl  docfx_repo.bzl  dotnet_format.bzl  dotnet_nunit_test_suite.bzl  generate_resources.bzl  generate_resources_tool.py  mtp_shim.cs  nuget_pack.bzl  nuget_push.bzl  paket_deps.bzl  sourcelink.bzl
dotnet/src/support/: BUILD.bazel  GlobalSuppressions.cs  Selenium.Support.csproj  Selenium.Support.nuspec  Selenium.WebDriver.Support.csproj
dotnet/src/webdriver/: Alert.cs  BUILD.bazel  By.cs  CapabilityType.cs  Command.cs  CommandInfo.cs  CommandInfoRepository.cs  Cookie.cs  CookieJar.cs  DetachedShadowRootException.cs  DomMutatedEventArgs.cs  DriverCommand.cs  DriverFinder.cs  DriverOptions.cs  DriverProcessStartedEventArgs.cs  DriverProcessStartingEventArgs.cs  DriverService.cs  DriverServiceNotFoundException.cs  ElementClickInterceptedException.cs  ElementCoordinates.cs  ElementNotInteractableException.cs  EncodedFile.cs  ErrorResponse.cs  GlobalSuppressions.cs  HttpCommandInfo.cs  HttpRequestData.cs  HttpResponseContent.cs  HttpResponseData.cs  IActionExecutor.cs  IAlert.cs  IAllowsFileDetection.cs  ICapabilities.cs  ICommandExecutor.cs  ICookieJar.cs  ICustomDriverCommandExecutor.cs  IHasDownloads.cs  IJavaScriptEngine.cs  IJavascriptExecutor.cs  ILocatable.cs  ILogs.cs  (+70 more)
dotnet/test/: README.md
dotnet/test/chrome/: ChromeSpecificTests.cs  Selenium.WebDriver.Chrome.Tests.csproj
dotnet/test/common/: AlertsTest.cs  AlertsTests.cs  AssemblyFixture.cs  BUILD.bazel  ChildrenFindingTest.cs  ChildrenFindingTests.cs  ClearTests.cs  ClickScrollingTest.cs  ClickScrollingTests.cs  ClickTest.cs  ClickTests.cs  CommandTests.cs  ContentEditableTest.cs  ContentEditableTests.cs  CookieImplementationTest.cs  CookieImplementationTests.cs  CookieTest.cs  CookieTests.cs  CorrectEventFiringTest.cs  CorrectEventFiringTests.cs  CssValueTests.cs  DownloadsTest.cs  DownloadsTests.cs  DriverElementFindingTest.cs  DriverElementFindingTests.cs  DriverTestFixture.cs  ElementAttributeTest.cs  ElementAttributeTests.cs  ElementElementFindingTest.cs  ElementElementFindingTests.cs  ElementEqualityTest.cs  ElementEqualityTests.cs  ElementFindingTest.cs  ElementFindingTests.cs  ElementPropertyTests.cs  ElementSelectingTests.cs  ErrorsTests.cs  ExecutingAsyncJavascriptTest.cs  ExecutingAsyncJavascriptTests.cs  ExecutingJavascriptTest.cs  (+71 more)
dotnet/test/edge/: EdgeSpecificTests.cs  Selenium.WebDriver.Edge.Tests.csproj
dotnet/test/firefox/: BUILD.bazel  FirefoxDriverServiceTest.cs  FirefoxDriverServiceTests.cs  FirefoxDriverTest.cs  FirefoxDriverTests.cs  FirefoxProfileManagerTests.cs  FirefoxProfileTests.cs  Selenium.WebDriver.Firefox.Tests.csproj
dotnet/test/ie/: AssemblyTeardown.cs  IeSpecificTests.cs  Selenium.WebDriver.IE.Tests.csproj
dotnet/test/remote/: AssemblyTeardown.cs  BUILD.bazel  ChromeRemoteWebDriver.cs  EdgeRemoteWebDriver.cs  FirefoxRemoteWebDriver.cs  RemoteSessionCreationTests.cs  RemoteSessionEventTests.cs  RemoteWebDriverSpecificTests.cs  Selenium.WebDriver.Remote.Tests.csproj  TestInternetExplorerRemoteWebDriver.cs
dotnet/test/safari/: SafariSpecificTests.cs  Selenium.WebDriver.Safari.Tests.csproj
dotnet/test/support/: AssemblyFixture.cs  BUILD.bazel  Selenium.Support.Tests.csproj  Selenium.WebDriver.Support.Tests.csproj
dotnet/test/testing.webserver/: AppServer.cs  BUILD.bazel  InlinePage.cs  Selenium.Testing.WebServer.csproj  UrlBuilder.cs
dotnet/test/webdriver/: AlertsTests.cs  AssemblyFixture.cs  BUILD.bazel  ChildrenFindingTests.cs  ClearTests.cs  ClickScrollingTests.cs  ClickTests.cs  CommandTests.cs  ContentEditableTests.cs  CookieImplementationTests.cs  CookieTests.cs  CorrectEventFiringTests.cs  CssValueTests.cs  DownloadsTests.cs  DriverElementFindingTests.cs  DriverTestFixture.cs  (+50 more)
java/private/: BUILD.bazel  java_library.bzl  java_test_suite.bzl  junit5_test.bzl  selenium_test.bzl  suite.bzl
javascript/atoms/: BUILD.bazel  dom.js  package.json
javascript/private/: BUILD.bazel  closure_js_deps.bzl  closure_make_deps.py  gen_file.py  header.bzl  jsdoc.bzl  test_suite.bzl
javascript/selenium-webdriver/: AGENTS.md  BUILD.bazel  bidi_schema_diff_test.mjs  generate_bidi.mjs  normalize_bidi_ast.mjs  normalize_bidi_ast_test.mjs  package.json  project_bidi_schema.mjs  project_bidi_schema_test.mjs
py/: AGENTS.md  BUILD.bazel  CHANGES  conftest.py  defs.bzl  generate.py  generate_api_module_listing.py  generate_bidi.py  pyproject.toml  requirements.txt  requirements_lock.txt  run_mypy.py  run_sphinx_autogen.py  tox.ini
py/docs/: .readthedocs.yaml
py/private/: BUILD.bazel  _network_handlers.py  bidi_enhancements_manifest.py  browsers.bzl  cdp.py  generate_bidi.bzl  generate_devtools.bzl  import.bzl  merge_cddl.py  ruff.py  ruff_check.py  ruff_format.py  sphinx_docs.bzl  suite.bzl
py/selenium/: __init__.py
rb/spec/: BUILD.bazel  tests.bzl
rb/support/: BUILD.bazel  bundle_update.rb  nightly_version_generator.rb  rbs_collection_update.rb  steep_check.rb
rust/: AGENTS.md  BUILD.bazel  CHANGELOG.md  Cargo.toml
rust/private/: rustfmt_wrapper.bzl
rust/src/: chrome.rs  config.rs  edge.rs  files.rs  firefox.rs  iexplorer.rs  jre.rs  lib.rs  lock.rs  main.rs  metadata.rs  rules.rs  shell.rs  skills.rs
rust/tests/: BUILD.bazel  browser_tests.rs  cache_tests.rs  common.rs  config_tests.rs  rules_tests.rs  skills_tests.rs
(+2471 files in other folders)
